--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,7 +44,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #main {
-  margin-top: 60px;
+  margin-top: 80px;
   padding: 20px 30px;
   transition: all 0.3s;
 }
@@ -316,7 +316,7 @@ h6 {
 
 .breadcrumb {
   font-size: 14px;
-  font-family: "Nunito", sans-serif;
+  font-family: "Open Sans", "Roboto", "Noto Sans Thai", sans-serif;
   color: #899bbd;
   font-weight: 600;
 }
@@ -395,6 +395,8 @@ h6 {
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
   background-color: #fff;
   padding-left: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   /* Toggle Sidebar Button */
   /* Search Bar */
 }
@@ -612,7 +614,7 @@ h6 {
 
 .sidebar {
   position: fixed;
-  top: 60px;
+  top: 80px;
   left: 0;
   bottom: 0;
   width: 300px;
@@ -624,6 +626,7 @@ h6 {
   scrollbar-color: #aab7cf transparent;
   box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
   background-color: #fff;
+  /* background-color: aliceblue; */
 }
 
 @media (max-width: 1199px) {
@@ -695,8 +698,12 @@ h6 {
   font-size: 15px;
   font-weight: 400;
   color: #012970;
+  /* color: white; */
   transition: 0.3;
-  background: #f6f9ff;
+  /* background: #f6f9ff; */
+  /* background-color: lightsteelblue; */
+  /* background-color: aliceblue; */
+  background-color: #ffefca;
   padding: 10px 15px;
   border-radius: 4px;
 }
@@ -710,6 +717,7 @@ h6 {
 .sidebar-nav .nav-link.collapsed {
   color: #012970;
   background: #fff;
+  /* background-color: aliceblue; */
 }
 
 .sidebar-nav .nav-link.collapsed i {
@@ -816,6 +824,22 @@ h6 {
   padding-bottom: 10px;
 }
 
+.dashboard .request-card {
+  border-bottom: red solid 5px;
+}
+
+.dashboard .waitapprov-card {
+  border-bottom: orange solid 5px;
+}
+
+.dashboard .approv-card {
+  border-bottom: green solid 5px;
+}
+
+.dashboard .total-card {
+  border-bottom: #4154f1 solid 5px;
+}
+
 .dashboard .info-card h6 {
   font-size: 16px;
   color: #012970;
@@ -833,19 +857,24 @@ h6 {
   flex-grow: 0;
 }
 
-.dashboard .sales-card .card-icon {
-  color: #4154f1;
+.dashboard .request-card .card-icon {
+  color: red;
   background: #f6f6fe;
 }
 
-.dashboard .revenue-card .card-icon {
-  color: #2eca6a;
-  background: #e0f8e9;
+.dashboard .waitapprov-card .card-icon {
+  color: orange;
+  background: #f6f6fe;
 }
 
-.dashboard .customers-card .card-icon {
-  color: #ff771d;
-  background: #ffecdf;
+.dashboard .approv-card .card-icon {
+  color: green;
+  background: #f6f6fe;
+}
+
+.dashboard .total-card .card-icon {
+  color: #4154f1;
+  background: #f6f6fe;
 }
 
 /* Activity */
@@ -1252,4 +1281,100 @@ h6 {
   text-align: center;
   font-size: 13px;
   color: #012970;
+}
+
+tr td img {
+  height: 60px;
+}
+
+.carlendar {
+  padding: 24px;
+}
+
+/* Month header */
+
+.month {
+  padding: 26px 16px;
+  width: 100%;
+  background: aliceblue;
+  text-align: center;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+/* Month list */
+
+.month ul {
+  margin: 0;
+  padding: 0;
+}
+
+.month ul li {
+  color: #012970;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  list-style-type: none;
+}
+
+/* Previous button inside month header */
+
+.month .prev {
+  float: left;
+  padding-top: 10px;
+}
+
+/* Next button */
+
+.month .next {
+  float: right;
+  padding-top: 10px;
+}
+
+/* Weekdays (Mon-Sun) */
+
+.weekdays {
+  margin: 0;
+  padding: 10px 0;
+  background-color: #ddd;
+}
+
+.weekdays li {
+  display: inline-block;
+  width: 13.6%;
+  color: #666;
+  text-align: center;
+  font-weight: bold;
+}
+
+/* Days (1-31) */
+
+.days {
+  padding: 10px;
+  background: #eee;
+  margin: 0;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.days li {
+  list-style-type: none;
+  display: inline-block;
+  width: 13.8%;
+  height: 100px;
+  text-align: center;
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: #777;
+  border: 1px solid gainsboro;
+  background-color: white;
+  padding: 6px;
+}
+
+/* Highlight the "current" day */
+
+.days li .active {
+  /* padding: 5px; */
+  background: orange;
+  color: white !important;
 }
