update v4.23  CBS   - add notification

--- a/src/mih_intranet/CBS/css/index.css
+++ b/src/mih_intranet/CBS/css/index.css
@@ -8,6 +8,7 @@
     border-radius:50% !important;
     height:25px !important;
     width:25px !important;
+    line-height:25px !important;
 }
 
 .MuiGrid-item.center {
